--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="grid">
           <article class="card">
-            <h3>Basketball Player & Ball Tracking (CV)</h3>
+            <h3>Basketball Player & Ball Tracking (Open - CV)</h3>
             <p>
               Player detection + tracking pipeline using YOLO + tracking (BoT-SORT/ByteTrack) with performance metrics.
             </p>
