Enhance portfolio description with roles
Added additional roles to the portfolio description.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="hero">
         <h1>Data Science & ML Portfolio</h1>
         <p>
+          Computer Vision Engineer | NLP Engineer | Data Scientist | Machine Learning| I Build Machines That See, Learn, and Understand the World
           I build end-to-end machine learning projects — from data + modeling to evaluation and deployment-ready code.
         </p>
 
